k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-app
  namespace: production
spec:
  # ClusterIP: solo accesible dentro del cluster
  # El Ingress se encarga de exponer al exterior
  type: ClusterIP
  selector:
    app: poc-app
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
