k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-app
  namespace: production
  annotations:
    # Indica que usamos el Nginx Ingress Controller
    kubernetes.io/ingress.class: nginx
    # Redirige HTTP -> HTTPS automáticamente
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Cambiar a "true" cuando tengas TLS
    # Tamaño máximo del body de requests (Útil para uploads)
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  # Cambia esto por tu dominio real o IP de tu cluster
  - host: poc-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poc-app
            port:
              number: 8000

# Descommentar cuando tengas certificado TLS
# tls:
# - hosts:
#   - poc-app.local
# secretName: poc-app.tls
